# digital_analyzer

./: Cargo.toml  README.md  config.json  memory.x
.cargo/: config.toml
src/: main.rs
